--- a/resources/Content.less
+++ b/resources/Content.less
@@ -173,6 +173,16 @@
     word-wrap: break-word;
 }
 
+html.nightingale-dark-mode {
+    .catlinks {
+        background: var(--background-color-card);
+        border-color: var(--border-color-base);
+        color: var(--color-base);
+        /* darkening the shadow so it remains visible */
+        box-shadow: 4px 3px 7px 3px var(--shadow-color); 
+    }
+}
+
 /* 1. Fix "Active Filters" buttons (Tags) */
 .oo-ui-tagItemWidget,
 .mw-rcfilters-ui-filterTagItemWidget {
