--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -71,6 +71,12 @@
     --color-dropdown-text: #000000;
     --background-color-dropdown-hover: #eaecf0;
 
+     /* Category section */
+    --catlinks-bg: #ffffff;
+    --catlinks-border: #eaecf0;
+    --catlinks-shadow: rgba(0, 0, 0, 0.1);
+    --catlinks-text: #202122;
+
     /* Footer */
     --background-color-footer: #72777d;
     --color-footer-text: #ffffff;
@@ -158,6 +164,12 @@ html.nightingale-dark-mode {
         --border-color-dropdown: #4a4a4a;
         --color-dropdown-text: #d1d5db;
         --background-color-dropdown-hover: #363636;
+
+        /* Category */
+        --catlinks-bg: #222222;
+        --catlinks-border: #4a4a4a;
+        --catlinks-shadow: rgba(0, 0, 0, 0.5);
+        --catlinks-text: #eaecf0;
 
         /* Footer */
         --background-color-footer: #2a2a2a;
