--- a/resources/Dropdown.less
+++ b/resources/Dropdown.less
@@ -22,9 +22,9 @@
         
         /* Layout Sizing */
         width: max-content;
-        min-width: 250px;
+        min-width: 160px;
         max-width: 90vw;
-        padding: 15px;
+        padding: 10px;
     }
 
     /* Show the menu when the checkbox is checked */
@@ -63,8 +63,8 @@
 
 /* Optional: Add a separator line between the two lists */
 .nightingale-section-primary {
-    border-right: 1px solid var(--border-color-subtle, #eee);
-    padding-right: 20px !important;
+    border-left: 1px solid var(--border-color-subtle, #eee);
+    padding-left: 20px !important;
 }
 
 /* 4. The List Items and Links */
