--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -8,9 +8,12 @@
     --background-color-article: #fbfdfd;
     --background-color-thumb: #fdfcfb;
     --background-color-card: #ffffff;
+    --background-color-hover: #f5f5f5;
     --border-color-base: #eaecf0;
-    
+    --border-color-subtle: #eaecf0;
+
     /* Text Colors */
+    --color-text-main: #202122;
     --color-thumb: #170b06;
     --color-base: #303030;
     --color-gray: #522173;
@@ -94,9 +97,12 @@ html.nightingale-dark-mode {
         --background-color-article: #1c1c1c;
         --background-color-thumb: #252525;
         --background-color-card: #1c1c1c;
+        --border-color-subtle: #4a4a4a;
+        --background-color-hover: #363636;
         --border-color-base: #4a4a4a;
 
         /* Text Colors */
+        --color-text-main: #e6e6e6;
         --color-thumb: #dcdcdc;
         --color-base: #d1d5db;
         --color-gray: #b08fc2;
