--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -193,6 +193,7 @@ html.nightingale-dark-mode {
 @background-color-card: var(--background-color-card);
 @border-color-base: var(--border-color-base);
 
+@color-text-main: var(--color-text-main); 
 @color-thumb: var(--color-thumb);
 @color-base: var(--color-base);
 @color-gray: var(--color-gray);
