--- a/resources/Dropdown.less
+++ b/resources/Dropdown.less
@@ -75,8 +75,8 @@
 /* 2. Mega Menu Specific Layout */
 .nightingale-mega-menu {
     display: flex;
-    flex-direction: row-reverse; /* Primary left, Tools right */
-    align-items: flex-start;
+    flex-direction: row-reverse; 
+    align-items: stretch; 
     gap: 20px;
 }
 
