--- a/resources/Content.less
+++ b/resources/Content.less
@@ -325,6 +325,11 @@ html.nightingale-dark-mode {
         }
     }
 }
+#pagehistory li.selected {
+    background-color: @background-color-ui-subtle;
+    color: @color-base;
+    outline: 1px dashed @border-color-ui-widget;
+}
 
 /* --- Code & Pre Blocks --- */
 pre, code, .mw-code {
