--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -55,9 +55,11 @@
     --color-gutter-text: #888888;
     --background-color-highlight: #fdf2d5; 
 
-    /* Codex Warnings */
+    /* Codex */
     --background-color-warning-subtle: #fdf2d5;
     --border-color-warning: #ab7f2a;
+    --background-color-interactive-subtle: var(--background-color-ui-subtle);
+    --border-color-interactive: var(--border-color-ui-widget);
     
     /* Save Buttons */
     --background-color-btn-save: #36c;
@@ -152,9 +154,11 @@ html.nightingale-dark-mode {
         --color-gutter-text: #666666;
         --background-color-highlight: #4d4512;
 
-        /* Codex Warnings */
+        /* Codex */
         --background-color-warning-subtle: #3b2d10;
         --border-color-warning: #8a6d3b;
+        --background-color-interactive-subtle: var(--background-color-ui-subtle);
+        --border-color-interactive: var(--border-color-ui-widget);
 
         /* Save Buttons */
         --background-color-btn-save: #3b5998;
