--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -59,7 +59,9 @@
     --background-color-warning-subtle: #fdf2d5;
     --border-color-warning: #ab7f2a;
     --background-color-interactive-subtle: var(--background-color-ui-subtle);
+    --background-color-interactive-subtle--hover: #eaecf0;
     --border-color-interactive: var(--border-color-ui-widget);
+    --border-color-interactive--hover: #8e949a;
     
     /* Save Buttons */
     --background-color-btn-save: #36c;
@@ -158,7 +160,9 @@ html.nightingale-dark-mode {
         --background-color-warning-subtle: #3b2d10;
         --border-color-warning: #8a6d3b;
         --background-color-interactive-subtle: var(--background-color-ui-subtle);
+        --background-color-interactive-subtle--hover: #2a2a2a;
         --border-color-interactive: var(--border-color-ui-widget);
+        --border-color-interactive--hover: #6a6a6a;
 
         /* Save Buttons */
         --background-color-btn-save: #3b5998;
