--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -60,8 +60,10 @@
     --border-color-warning: #ab7f2a;
     --background-color-interactive-subtle: var(--background-color-ui-subtle);
     --background-color-interactive-subtle--hover: #eaecf0;
+    --background-color-interactive-subtle--active: #c8ccd1;
     --border-color-interactive: var(--border-color-ui-widget);
     --border-color-interactive--hover: #8e949a;
+    
     
     /* Save Buttons */
     --background-color-btn-save: #36c;
@@ -147,7 +149,7 @@ html.nightingale-dark-mode {
         /* muted red for deleted lines, muted green for added lines */
         --background-color-diff-deleted: #372323; 
         --background-color-diff-added: #233723;
-        --background-color-diff-change-del: #683535; /* Brighter highlight for changed text */
+        --background-color-diff-change-del: #683535;
         --background-color-diff-change-add: #356835;
         --color-diff-text: #d1d5db;
 
@@ -161,6 +163,7 @@ html.nightingale-dark-mode {
         --border-color-warning: #8a6d3b;
         --background-color-interactive-subtle: var(--background-color-ui-subtle);
         --background-color-interactive-subtle--hover: #2a2a2a;
+        --background-color-interactive-subtle--active: #363636;
         --border-color-interactive: var(--border-color-ui-widget);
         --border-color-interactive--hover: #6a6a6a;
 
