--- a/resources/Content.less
+++ b/resources/Content.less
@@ -379,6 +379,11 @@ html.nightingale-dark-mode .ace-tm {
         color: inherit !important;
     }
 }
+html.nightingale-dark-mode .codeEditor-status {
+    background-color: @background-color-editor-bar !important;
+    border-top: 1px solid @border-color-ui-widget !important;
+    color: @color-editor-text !important;
+}
 
 /* --- Code & Pre Blocks --- */
 pre, code, .mw-code {
