--- a/resources/Content.less
+++ b/resources/Content.less
@@ -331,6 +331,9 @@ html.nightingale-dark-mode {
     outline: 1px dashed @border-color-ui-widget;
 }
 /* --- CodeEditor (Lua Modules) Fixes --- */
+.ace_print-margin {
+    display: none !important;
+}
 html.nightingale-dark-mode .ace-tm {
     /* 1. Main Editor Background & Text */
     background-color: @background-color-editor !important;
