--- a/resources/Content.less
+++ b/resources/Content.less
@@ -46,6 +46,7 @@
 
     #toc,
     .toc,
+    .toccolours,
     div.thumbinner {
         border-color: @color-gray;
         background-color: @background-color-thumb;
