--- a/resources/Content.less
+++ b/resources/Content.less
@@ -440,14 +440,23 @@ html.nightingale-dark-mode .mw-highlight .mf {
 html.nightingale-dark-mode .mw-highlight .n,
 html.nightingale-dark-mode .mw-highlight .na,
 html.nightingale-dark-mode .mw-highlight .nb,
-html.nightingale-dark-mode .mw-highlight .nc,
 html.nightingale-dark-mode .mw-highlight .nv {
     color: @color-editor-text !important; 
+}
+html.nightingale-dark-mode .mw-highlight .nc {
+    color: #4ec9b0 !important;
+}
+html.nightingale-dark-mode .mw-highlight .nf {
+    color: #dcdcaa !important;
 }
 /* Operators (=, +, ..) -> Light Text */
 html.nightingale-dark-mode .mw-highlight .o,
 html.nightingale-dark-mode .mw-highlight .ow {
     color: @color-editor-text !important;
+}
+html.nightingale-dark-mode .mw-content-ltr.mw-highlight-lines pre,
+html.nightingale-dark-mode .mw-content-ltr.content .mw-highlight-lines pre {
+    box-shadow: inset 2.75em 0 0 @background-color-gutter !important;
 }
 
 /* --- Code & Pre Blocks --- */
