--- a/resources/Content.less
+++ b/resources/Content.less
@@ -457,7 +457,7 @@ html.nightingale-dark-mode .mw-highlight .ow {
 }
 html.nightingale-dark-mode .mw-content-ltr.mw-highlight-lines pre,
 html.nightingale-dark-mode .mw-content-ltr.content .mw-highlight-lines pre {
-    box-shadow: inset 2.75em 0 0 @background-color-gutter !important;
+    box-shadow: unset !important;
 }
 
 /* --- Code & Pre Blocks --- */
