--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -127,8 +127,8 @@ html.nightingale-dark-mode {
         /* Header & UI Elements */
         --background-color-header: #1c1c1c;
         --color-header-text: #8ab4f8;
-        --color-icon-base: #2c445c;
-        --color-icon-base-hover: #8ab4f8;
+        --color-icon-base: #8ab4f8;
+        --color-icon-base-hover: #d2e3fc;
 
         /* Inputs */
         --background-color-input: #252525;
