--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -127,7 +127,7 @@ html.nightingale-dark-mode {
         /* Header & UI Elements */
         --background-color-header: #1c1c1c;
         --color-header-text: #8ab4f8;
-        --color-icon-base: #6ea8fe; /* Chagne me */
+        --color-icon-base: #4493f8; /* Change me */
         --color-icon-base-hover: #d2e3fc;
 
         /* Inputs */
