--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -9,6 +9,7 @@
     --background-color-thumb: #fdfcfb;
     --background-color-card: #ffffff;
     --background-color-hover: #f5f5f5;
+    --background-color-interactive: #eaecf0;
     --border-color-base: #eaecf0;
     --border-color-subtle: #eaecf0;
 
@@ -105,6 +106,8 @@ html.nightingale-dark-mode {
         --background-color-card: #1c1c1c;
         --border-color-subtle: #4a4a4a;
         --background-color-hover: #363636;
+        --background-color-interactive: #363636;
+        --background-color-interactive-selected: #2a4b8d;
         --border-color-base: #4a4a4a;
 
         /* Text Colors */
