--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -113,7 +113,7 @@ html.nightingale-dark-mode {
         /* Text Colors */
         --color-text-main: #e6e6e6;
         --color-thumb: #dcdcdc;
-        --color-base: #d1d5db;
+        --color-base: #bdc1c6;
         --color-gray: #b08fc2;
         --color-gray-2: #555555;
 
