--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -40,6 +40,7 @@
     --background-color-input: #ffffff;
     --color-input-text: #000000;
     --border-color-input: #ced4da;
+    --background-color-progressive-subtle: #eaf3ff;
 
     /* Editor & Code Blocks */
     --background-color-code: #f8f9fa;
@@ -137,6 +138,7 @@ html.nightingale-dark-mode {
         --background-color-input: #252525;
         --color-input-text: #d1d5db;
         --border-color-input: #555555;
+        --background-color-progressive-subtle: #042347;
 
         /* Editor & Code Blocks (Dark Mode) */
         --background-color-code: #121212;
@@ -234,6 +236,7 @@ html.nightingale-dark-mode {
 @background-color-input: var(--background-color-input);
 @color-input-text: var(--color-input-text);
 @border-color-input: var(--border-color-input);
+@background-color-progressive-subtle: var(--background-color-progressive-subtle);
 
 /* Editor & Code Mappings */
 @background-color-code: var(--background-color-code);
